--- a/index.html
+++ b/index.html
@@ -245,7 +245,7 @@
                                     <h2>02</h2>
                                 </div>
                                 <ul>
-                                    <li>Trending Dexscannet</li>
+                                    <li>Trending Dexscanner</li>
                                     <li>Trending DexView</li>
                                     <li>Apply Listing CoinGecko</li>
                                     <li>Apply Listing CoinMarketCap</li>
